# blindata-dataops-blueprints-examples

./: .dockerignore  .gitignore  Dockerfile  README.md  README.md.vm  blueprint-manifest.yaml  data-product-descriptor.json.vm  requirements.txt
.github/workflows/: cd-deploy.yml.vm  deploy.yml.vm  publish.yml.vm
application/: README.md  pyproject.toml  transform_hook.py
application/src/: descriptor_loader.py  extract.py  load_dlt.py  main.py  validate_output.py
blueprint/: README.md  blueprint-manifest.yaml  blueprint.yaml
blueprints/demo_blueprint/: data-product-descriptor-template.json
demo_blueprint/: data-product-descriptor-template.json  params.json
descriptor/: data-product-descriptor.json.vm
infrastructure/: backend.tf.vm  cloud_run.tf  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/core/: locals.tf  network.tf  storage.tf
policies/: DataProductFQN.rego
source-aligned/: .gitignore  README.md.vm
source-aligned/.github/workflows/: cd-deploy.yml.vm
source-aligned/blueprint/: README.md  blueprint.yaml
source-aligned/infrastructure/: variables.tf.vm
source-aligned/infrastructure/core/: iam.tf  locals.tf  network.tf  variables.tf
source-aligned/pipeline/: __init__.py  settings.py.vm  source_aligned_pipeline.py
